@@ -1,3 +1,12 @@
+2008-05-18  Jens-Michael Hoffmann  <jensmh@gmx.de>
+
+    * src/lib/AbstractScanlineTextureMapper.cpp
+    (selectTileLevel): since this method calls tileLevelInit,
+    set m_tileLevel there.
+    (tileLevelInit): set m_tileLevel here.
+
+    Small cleanup.
+
 2008-05-18  Torsten Rahn  <rahn@kde.org>
 
     * src/lib/MarbleWidget.cpp:
